Funcionalidades JFrame Room Patient Discharge terminadas y JFrameFacura terminado

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,12 +27,14 @@ dist.dir=dist
 dist.jar=${dist.dir}/SisHospital.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.AbsoluteLayout.jar=C:\\Users\\user\\Desktop\\librerias\\librerias\\AbsoluteLayout.jar
 file.reference.mysql-connector-java-8.0.19.jar=C:\\Users\\user\\Desktop\\librerias\\librerias\\mysql-connector-java-8.0.19.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.mysql-connector-java-8.0.19.jar}
+    ${file.reference.mysql-connector-java-8.0.19.jar}:\
+    ${file.reference.AbsoluteLayout.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
