--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,13 +28,27 @@ dist.jar=${dist.dir}/SisHospital.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.AbsoluteLayout.jar=C:\\Users\\user\\Desktop\\librerias\\librerias\\AbsoluteLayout.jar
+file.reference.commons-collections-3.2.1.jar=C:\\Users\\user\\Desktop\\librerias\\librerias\\lib\\commons-collections-3.2.1.jar
+file.reference.commons-digester-2.1.jar=C:\\Users\\user\\Desktop\\librerias\\librerias\\lib\\commons-digester-2.1.jar
+file.reference.commons-logging-1.2.jar=C:\\Users\\user\\Desktop\\librerias\\librerias\\lib\\commons-logging-1.2.jar
+file.reference.groovy-2.4.5.jar=C:\\Users\\user\\Desktop\\librerias\\librerias\\lib\\groovy-2.4.5.jar
+file.reference.itext-pdfa-5.5.4.jar=C:\\Users\\user\\Desktop\\librerias\\librerias\\lib\\itext-pdfa-5.5.4.jar
+file.reference.itextpdf-5.5.4.jar=C:\\Users\\user\\Desktop\\librerias\\librerias\\lib\\itextpdf-5.5.4.jar
+file.reference.jasperreports-6.0.0.jar=C:\\Users\\user\\Desktop\\librerias\\librerias\\lib\\jasperreports-6.0.0.jar
 file.reference.mysql-connector-java-8.0.19.jar=C:\\Users\\user\\Desktop\\librerias\\librerias\\mysql-connector-java-8.0.19.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.mysql-connector-java-8.0.19.jar}:\
-    ${file.reference.AbsoluteLayout.jar}
+    ${file.reference.AbsoluteLayout.jar}:\
+    ${file.reference.jasperreports-6.0.0.jar}:\
+    ${file.reference.itext-pdfa-5.5.4.jar}:\
+    ${file.reference.itextpdf-5.5.4.jar}:\
+    ${file.reference.commons-collections-3.2.1.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.groovy-2.4.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
